<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    android:background="@drawable/shape_item">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            tools:backgroundTint="@android:color/darker_gray"
            app:cardCornerRadius="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:contentDescription="@string/avatar_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/img_item_photo"
                android:scaleType="fitXY"/>

        </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextItemTop"
                tools:text="@string/name"
                app:layout_constraintTop_toTopOf="@id/cv_image"
                app:layout_constraintStart_toEndOf="@id/cv_image"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tv_item_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                style="@style/TextItemDetail"
                tools:text="@string/company"
                app:layout_constraintTop_toBottomOf="@id/tv_item_name"
                app:layout_constraintStart_toEndOf="@id/cv_image"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tv_item_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                style="@style/TextItemDetail"
                android:maxLines="3"
                android:justificationMode="inter_word"
                tools:text="@string/location"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_item_company"
                app:layout_constraintStart_toEndOf="@id/cv_image"
                android:layout_marginStart="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>